fix: more contrast tweaks

--- a/src/client/components/Metadata.css
+++ b/src/client/components/Metadata.css
@@ -1,5 +1,5 @@
 .metadata {
-  color: #888;
+  color: #777676;
   font-style: italic;
   margin-bottom: 1rem;
 }
