--- a/src/client/components/When.css
+++ b/src/client/components/When.css
@@ -1,5 +1,5 @@
 .when {
-  color: #888;
+  color: #777676;
   font-style: italic;
 }
 
