--- a/src/client/skeleton.css
+++ b/src/client/skeleton.css
@@ -106,7 +106,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #189FCA;
+  color: #1480A2;
   text-decoration-color: rgba(0, 0, 0, .1);
 }
 a:hover {
